sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/Inventory_Requisition__c.object-meta.xml
<CustomObject>
    <label>Inventory Requisition</label>
    <nameField>
        <displayFormat>IR-{0000000}</displayFormat>
        <label>Inventory Requisition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>