sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/fields/Asset_Maintenance_Task__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maintenance_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Maintenance Task</label>
    <referenceTo>Asset_Maintenance_Task__c</referenceTo>
    <relationshipLabel>Inventory Requisitions</relationshipLabel>
    <relationshipName>Inventory_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>