sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Inventory Requisitions (Creator)</relationshipLabel>
    <relationshipName>Inventory_Requisitions1</relationshipName>
    <type>Lookup</type>
</CustomField>