sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Inventory Requisitions (Department)</relationshipLabel>
    <relationshipName>Inventory_Requisitions3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>