sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dimension 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Inventory Requisitions (Dimension 2)</relationshipLabel>
    <relationshipName>Dimension_2</relationshipName>
    <type>Lookup</type>
</CustomField>