sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dimension 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Inventory Requisitions (Dimension 3)</relationshipLabel>
    <relationshipName>Inventory_Requisitions1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>