sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/fields/Issue_Value__c.field-meta.xml
<CustomField>
    <fullName>Issue_Value__c</fullName>
    <label>Issue Value</label>
    <summarizedField>Inventory_Requisition_Item__c.Issued_Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Requisition_Item__c.Inventory_Requisition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>