sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition__c/listViews/FLI_Directors_Inventory_Requisition.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Inventory_Requisition</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>